--- a/src/SearchResults/searchResults.css
+++ b/src/SearchResults/searchResults.css
@@ -64,28 +64,20 @@ flex-grow: 0;
 
 #user-entered-search-results-container{
     display: flex;
-flex-direction: column;
-justify-content: flex-start;
-align-items: center;
-padding: 32px 24px;
-gap: 40px;
-width: 100%;
-height: 1171px;
-
-/* Neutral/Grey/0 */
-
-background: #FFFFFF;
-/* Card */
-
-box-shadow: 0px 1px 3px rgba(16, 24, 40, 0.1), 0px 1px 2px rgba(16, 24, 40, 0.06);
-border-radius: 8px;
-
-/* Inside auto layout */
-
-flex: none;
-order: 2;
-align-self: stretch;
-flex-grow: 0;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 32px 24px;
+    gap: 40px;
+    width: 100%;
+    height: 100%;
+    background: #FFFFFF;
+    box-shadow: 0px 1px 3px rgba(16, 24, 40, 0.1), 0px 1px 2px rgba(16, 24, 40, 0.06);
+    border-radius: 8px;
+    flex: none;
+    order: 2;
+    align-self: stretch;
+    flex-grow: 0;
 }
 
 .se{
@@ -93,14 +85,9 @@ flex-grow: 0;
     flex-direction: row;
     align-items: flex-start;
     padding: 0px;
-    gap: 16px;
-    
+    gap: 16px;    
     width: 372px;
-    height: 21px;
-    
-    
-    /* Inside auto layout */
-    
+    height: 21px;    
     flex: none;
     order: 1;
     flex-grow: 0;
