--- a/src/SellerFlowSteps/step1.css
+++ b/src/SellerFlowSteps/step1.css
@@ -5,26 +5,25 @@
 }
 
 .main-seller-contaier {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
-  position: absolute;
-  left: 35vw;
-  padding: 0px;
-  gap: 16px;
-  width: 500px;
-  height: 1366px;
-  flex: none;
-  order: 0;
-  flex-grow: 0;
-  margin: 0px
+  /* Auto layout */
+
+display: flex;
+flex-direction: column;
+align-items: center;
+padding: 80px 32px;
+gap: 24px;
+position: absolute;
+width: 100vw;
+height: 100vh;
+left: 0px;
+top: 80px;
+
 }
 
 .seller-flow-bread-crumbs-container {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
   padding: 0px;
   gap: 4px;
   width: 500px;
@@ -44,7 +43,7 @@
   gap: 24px;
 
   width: 500px;
-  height: 1326px;
+  height: 1881px;
 
   /* Neutral/Grey/0 */
 
@@ -88,7 +87,7 @@
 
   font-family: 'Inter';
   font-style: normal;
-  font-weight: 500;
+  font-weight: 600;
   font-size: 24px;
   line-height: 150%;
   /* identical to box height, or 36px */
@@ -115,7 +114,7 @@
 
   font-family: 'Inter';
   font-style: normal;
-  font-weight: 500;
+  font-weight: 600;
   font-size: 12px;
   line-height: 150%;
   /* identical to box height, or 18px */
@@ -136,46 +135,46 @@
 
 .ad-edetails--of-car-container {
   display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  padding: 0px;
-  gap: 16px;
+flex-direction: column;
+align-items: flex-start;
+padding: 0px;
+gap: 16px;
 
-  width: 452px;
-  height: 666px;
+width: 452px;
+height: 976px;
 
-  /* Neutral/Grey/200 */
+/* Neutral/Grey/200 */
 
-  border-top: 1px solid #EAECF0;
+border-top: 1px solid #EAECF0;
 
-  /* Inside auto layout */
+/* Inside auto layout */
 
-  flex: none;
-  order: 1;
-  align-self: stretch;
-  flex-grow: 0;
+flex: none;
+order: 1;
+align-self: stretch;
+flex-grow: 0;
 }
 
 .car-ad-info-heading-container {
   display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  padding: 24px 0px 0px;
-  gap: 4px;
+flex-direction: column;
+align-items: flex-start;
+padding: 32px 0px 0px;
+gap: 4px;
 
-  width: 452px;
-  height: 51px;
+width: 452px;
+height: 59px;
 
-  /* Neutral/Grey/0 */
+/* Neutral/Grey/0 */
 
-  background: #FFFFFF;
+background: #FFFFFF;
 
-  /* Inside auto layout */
+/* Inside auto layout */
 
-  flex: none;
-  order: 0;
-  align-self: stretch;
-  flex-grow: 0;
+flex: none;
+order: 0;
+align-self: stretch;
+flex-grow: 0;
 }
 
 .car-ad-info-heading {
@@ -186,7 +185,7 @@
 
   font-family: 'Inter';
   font-style: normal;
-  font-weight: 500;
+  font-weight: 600;
   font-size: 18px;
   line-height: 150%;
   /* identical to box height, or 27px */
@@ -206,43 +205,43 @@
 
 .car-ad-info-input-fields-container {
   display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  padding: 0px;
-  gap: 24px;
+flex-direction: column;
+align-items: flex-start;
+padding: 0px;
+gap: 24px;
 
-  width: 452px;
-  height: 599px;
+width: 452px;
+height: 901px;
 
 
-  /* Inside auto layout */
+/* Inside auto layout */
 
-  flex: none;
-  order: 1;
-  align-self: stretch;
-  flex-grow: 0;
+flex: none;
+order: 1;
+align-self: stretch;
+flex-grow: 0;
 }
 
 .car-ads-photos-info-container {
   display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  padding: 0px;
-  gap: 16px;
+flex-direction: column;
+align-items: flex-start;
+padding: 0px;
+gap: 16px;
 
-  width: 452px;
-  height: 202px;
+width: 452px;
+height: 450px;
 
-  /* Neutral/Grey/200 */
+/* Neutral/Grey/200 */
 
-  border-top: 1px dashed #EAECF0;
+border-top: 1px dashed #EAECF0;
 
-  /* Inside auto layout */
+/* Inside auto layout */
 
-  flex: none;
-  order: 2;
-  align-self: stretch;
-  flex-grow: 0;
+flex: none;
+order: 2;
+align-self: stretch;
+flex-grow: 0;
 }
 
 .car-ads-price-info-container {
@@ -323,10 +322,80 @@
   align-items: flex-start;
   padding: 0px;
   gap: 4px;
-
   width: 452px;
   height: 59px;
+  flex: none;
+  order: 1;
+  align-self: stretch;
+  flex-grow: 0;
 
+}
+
+.insurence-validity-container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 0px;
+  gap: 4px;
+  width: 452px;
+  height: 59px;
+  flex: none;
+  order: 2;
+  align-self: stretch;
+  flex-grow: 0;
+}
+
+.insurence-heading-text {
+  width: 156px;
+  height: 21px;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 150%;
+  color: #344054;
+  flex: none;
+  order: 0;
+  flex-grow: 0;
+}
+
+.insurence-buttons-container {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  padding: 0px;
+  gap: 8px;
+  width: 94px;
+  height: 30px;
+  flex: none;
+  order: 1;
+  flex-grow: 0;
+}
+
+.insurence-buttons {
+  box-sizing: border-box;
+
+  /* Auto layout */
+
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  padding: 4px;
+  gap: 2px;
+
+  width: 41px;
+  height: 30px;
+
+  mix-blend-mode: multiply;
+  /* Neutral/Grey/300 */
+
+  border: 1px solid #D0D5DD;
+  border-radius: 100px;
+
+  /* Inside auto layout */
+
+  flex: none;
+  flex-grow: 0;
 }
 
 .fuel-type-label {
@@ -397,7 +466,7 @@
   color: #FFFFFF;
   font-family: 'Inter';
   font-style: normal;
-  font-weight: 500;
+  font-weight: 600;
   font-size: 12px;
   line-height: 18px;
   text-align: center;
@@ -432,7 +501,7 @@
   border-radius: 100px;
   font-family: 'Inter';
   font-style: normal;
-  font-weight: 500;
+  font-weight: 600;
   font-size: 12px;
   line-height: 18px;
   text-align: center;
@@ -442,32 +511,131 @@
 
 }
 
-.additions-info-button{
+.additions-info-button {
   width: 141px;
-height: 24px;
+  height: 24px;
 
-/* Body/Body 1 Medium */
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 150%;
+  color: #0068B3;
+  border-style: none;
+  background-color: transparent;
 
-font-family: 'Inter';
-font-style: normal;
-font-weight: 500;
-font-size: 16px;
-line-height: 150%;
-/* identical to box height, or 24px */
+  /* Inside auto layout */
 
+  flex: none;
 
-/* Primary/Blue 100 */
-
-color: #0068B3;
-border-style: none;
-background-color: transparent;
-
-/* Inside auto layout */
-
-flex: none;
-
-flex-grow: 0;
+  flex-grow: 0;
 }
+
+
+.no-of-owners-heading {
+  width: 102px;
+  height: 21px;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 150%;
+  color: #344054;
+  flex: none;
+  order: 0;
+  flex-grow: 0;
+}
+
+.no-of-owners-container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 0px;
+  gap: 4px;
+
+  width: 452px;
+  height: 59px;
+
+
+  /* Inside auto layout */
+
+  flex: none;
+  order: 0;
+  align-self: stretch;
+  flex-grow: 0;
+}
+
+.no-of-owners-buttons-container {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  padding: 0px;
+  gap: 8px;
+
+  width: 162px;
+  height: 30px;
+
+
+  /* Inside auto layout */
+
+  flex: none;
+  order: 1;
+  flex-grow: 0;
+}
+
+.owner-button {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  padding: 4px;
+  gap: 2px;
+  width: 30px;
+  height: 30px;
+  flex: none;
+  order: 0;
+  flex-grow: 0;
+  mix-blend-mode: multiply;
+  border: 1px solid #D0D5DD;
+  border-radius: 100px;
+  background-color: transparent;
+  padding-left: 8px;
+  padding-bottom: 15px;
+
+}
+
+.date-picker-input-field {
+  display: flex;
+flex-direction: column;
+align-items: flex-start;
+padding: 0px;
+gap: 4px;
+width: 100%;
+height: 44px;
+flex: none;
+order: 3;
+flex-grow: 0;
+margin-bottom: 20px;
+margin-top: 10px;
+}
+
+.colour-input-field {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 0px;
+  gap: 4px;
+
+  width: 100%;
+  height: 44px;
+
+
+  /* Inside auto layout */
+
+  flex: none;
+  order: 4;
+  flex-grow: 0;
+}
+
 .cars-ad-photos-info-heading-container {
   display: flex;
   flex-direction: column;
@@ -498,7 +666,7 @@ flex-grow: 0;
 
   font-family: 'Inter';
   font-style: normal;
-  font-weight: 500;
+  font-weight: 600;
   font-size: 18px;
   line-height: 150%;
   /* identical to box height, or 27px */
@@ -597,6 +765,29 @@ flex-grow: 0;
 
 }
 
+.car-ads-price-info-container{
+  display: flex;
+flex-direction: column;
+align-items: flex-start;
+padding: 0px;
+gap: 16px;
+
+width: 452px;
+height: 119px;
+
+/* Neutral/Grey/200 */
+
+border-top: 1px dashed #EAECF0;
+
+/* Inside auto layout */
+
+flex: none;
+order: 3;
+align-self: stretch;
+flex-grow: 0;
+}
+
+
 .cars-ads-price-info-heading-container {
   display: flex;
   flex-direction: column;
@@ -627,7 +818,7 @@ flex-grow: 0;
 
   font-family: 'Inter';
   font-style: normal;
-  font-weight: 500;
+  font-weight: 600;
   font-size: 18px;
   line-height: 150%;
   /* identical to box height, or 27px */
@@ -653,10 +844,11 @@ flex-grow: 0;
   display: flex;
   flex-direction: row;
   align-items: flex-start;
-  padding: 0px;
+  padding-top: 0px;
+  padding-bottom: 0px;
 
   width: 452px;
-  height: 44px;
+  height: 56px;
 
   /* White */
 
@@ -676,24 +868,14 @@ flex-grow: 0;
 
 .type-of-rupee {
   box-sizing: border-box;
-
-  /* Auto layout */
-
   display: flex;
   flex-direction: row;
   align-items: center;
   padding: 10px 12px 10px 14px;
-
   width: 58px;
-  height: 44px;
-
-  /* Neutral/Grey/300 */
-
+  height: 56px;
   border-right: 1px solid #D0D5DD;
   border-radius: 8px 0px 0px 8px;
-
-  /* Inside auto layout */
-
   flex: none;
   order: 0;
   align-self: stretch;
@@ -703,24 +885,12 @@ flex-grow: 0;
 .privacy-statement {
   width: 452px;
   height: 21px;
-
-  /* Body/Body 2 */
-
   font-family: 'Inter';
   font-style: normal;
-  font-weight: 500;
+  font-weight: 600;
   font-size: 14px;
   line-height: 150%;
-  /* identical to box height, or 21px */
-
-
-  /* Neutral/Grey/700 */
-
   color: #344054;
-
-
-  /* Inside auto layout */
-
   flex: none;
   order: 0;
   flex-grow: 1;
@@ -729,25 +899,45 @@ flex-grow: 0;
 .special-text {
   width: 452px;
   height: 21px;
-
-  /* Body/Body 2 */
-
   font-family: 'Inter';
   font-style: normal;
-  font-weight: 500;
+  font-weight: 600;
   font-size: 14px;
   line-height: 150%;
-  /* identical to box height, or 21px */
-
-
-  /* Neutral/Grey/700 */
-
   color: #0068B3;
-
-
-  /* Inside auto layout */
-
   flex: none;
   order: 0;
   flex-grow: 1;
+}
+
+.procedings-container{
+  
+box-sizing: border-box;
+
+/* Auto layout */
+
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: flex-start;
+padding: 32px 0px;
+gap: 8px;
+
+width: 452px;
+height: 146px;
+
+/* Neutral/Grey/0 */
+
+background: #FFFFFF;
+/* Neutral/Grey/300 */
+
+border-top: 1px dashed #D0D5DD;
+border-radius: 0px 0px 8px 8px;
+
+/* Inside auto layout */
+
+flex: none;
+order: 4;
+align-self: stretch;
+flex-grow: 0;
 }
