--- a/src/Settings/settings.css
+++ b/src/Settings/settings.css
@@ -8,10 +8,11 @@
     gap: 24px;
     position: absolute;
     width: 100vw;
-    height: 1304px;
+    height: 100%;
     left: 0px;
     top: 136px;
-
+    overflow-y: scroll;
+    padding-bottom: 150px;
 }
 
 .settings-main-ads-container {
@@ -56,13 +57,8 @@
     align-items: center;
     padding: 0px;
     gap: 16px;
-
-    width: 1280px;
+    width: 100%;
     height: 866px;
-
-
-    /* Inside auto layout */
-
     flex: none;
     order: 1;
     align-self: stretch;
@@ -76,13 +72,9 @@
     flex-direction: row;
     align-items: center;
     padding: 0px;
-
-    width: 1280px;
+    width: 100%;
     height: 21px;
     margin:0px;
-
-    /* Inside auto layout */
-
     flex: none;
     order: 0;
     align-self: stretch;
@@ -98,18 +90,11 @@
     align-items: center;
     padding: 32px 24px;
     gap: 24px;
-
     width: 600px;
-    height: 829px;
-
-    /* Neutral/Grey/0 */
-
+    height: 100%;
     background: #FFFFFF;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 8px;
-
-    /* Inside auto layout */
-
     flex: none;
     order: 1;
     flex-grow: 0;
@@ -159,24 +144,12 @@
 .general-heading {
     width: 52px;
     height: 21px;
-
-    /* Body/Body 2 */
-
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
     line-height: 150%;
-    /* identical to box height, or 21px */
-
-
-    /* Neutral/Grey/700 */
-
     color: #344054;
-
-
-    /* Inside auto layout */
-
     flex: none;
     order: 0;
     flex-grow: 0;
@@ -185,24 +158,12 @@
 .chat-heading {
     width: 32px;
     height: 21px;
-
-    /* Body/Body 2 */
-
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
     line-height: 150%;
-    /* identical to box height, or 21px */
-
-
-    /* Neutral/Grey/700 */
-
     color: #344054;
-
-
-    /* Inside auto layout */
-
     flex: none;
     order: 0;
     flex-grow: 0;
@@ -217,9 +178,6 @@
 
     max-width: 552px;
     height: 133px;
-
-    /* Neutral/Grey/200 */
-
     border-top: 1px solid #EAECF0;
 
     /* Inside auto layout */
