--- a/src/CurrentSubscriptionDetails/subscription.css
+++ b/src/CurrentSubscriptionDetails/subscription.css
@@ -6,7 +6,6 @@
     align-items: center;
     padding: 24px 80px 80px;
     gap: 24px;
-
     position: absolute;
     width: 100vw;
     height: 100%;
@@ -14,7 +13,9 @@
     top: 136px;
     overflow-y: scroll;
     padding-bottom: 170px;
-
+    background-color: #F4F5F7;
+    background-size: cover;
+    height: 100vh;
 }
 
 .my-subscription-ad-section {
