--- a/src/ElectronicsListItemDetails/electronicsListItemDetails.css
+++ b/src/ElectronicsListItemDetails/electronicsListItemDetails.css
@@ -4,14 +4,16 @@
     flex-direction: column;
     align-items: center;
     padding: 32px 80px 80px;
-    gap: 16px;
-  
+    gap: 16px;  
     position: absolute;
     width: 100vw;
     height: 100vh;
     left: 0px;
     top: 136px;
     overflow-y: scroll;
+    background-color: #F4F5F7;
+    background-size: cover;
+    height: 100vh;
      
   }
   
