--- a/src/HeadSection/Header.css
+++ b/src/HeadSection/Header.css
@@ -40,12 +40,13 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: center;
-  padding: 0px;
-  width: 96vw;
+  align-items: center;  
+  width: 100%;
   height: 48px;
-  margin-left: 4.0vw;
-  margin-right: 1.0vw;
+  padding-left:80px;
+  padding-right:80px;
+  padding-top:16px;
+  padding-bottom:16px; 
   flex: none;
   order: 0;
   flex-grow: 0
@@ -57,7 +58,7 @@ body {
   align-items: center;
   padding: 0px;
   gap: 40px;
-  width: 142.62px;
+  width: 15%;
   height: 28px;
   flex: none;
   order: 0;
@@ -65,7 +66,7 @@ body {
 }
 
 .company-logo {
-  width: 142.62px;
+  width: 100%;
   height: 28px;
   flex: none;
   order: 0;
@@ -93,6 +94,24 @@ body {
   margin: 0px;
 }
 
+.coutryDropdownInput{
+  width:100%
+}
+
+.state-butons-style{
+  background-color: transparent;
+  border-style: none;
+  color: #0068B3;
+  font-size: 14px;
+font-family: 'Inter';
+line-height: 150%;
+font-weight: 600;
+}
+
+.state-navbuttons:hover{
+  color: #0068B3;
+
+}
 
 .citys-dropdown-container {
   box-sizing: border-box;
@@ -101,7 +120,7 @@ body {
   align-items: center;
   padding: 12px 0px;
   gap: 8px;
-  width: 121px;
+  width: 20%;
   height: 45px;
   flex: none;
   order: 0;
@@ -117,12 +136,16 @@ body {
   flex-direction: row;
   align-items: flex-start;
   padding: 0px;
-  gap: 8px;
+  /* gap: 8px; */
 
-  width: 500px;
+  width: 80%;
   height: 48px;
 
-  margin-bottom: 10px;
+  background-color: #F2F4F7;
+  background-size: cover;
+  /* margin-bottom: 10px; */
+  border: 1px solid #EAECF0;
+  border-radius: 4px;
   /* Inside auto layout */
 
   flex: none;
@@ -130,28 +153,21 @@ body {
   flex-grow: 0;
 }
 
+.css-kp5vd9-MuiAutocomplete-root .MuiOutlinedInput-root {
+  padding: 0px;
+  height: 48px;
+  border-style: none;
+}
 
 .search-container {
   box-sizing: border-box;
-
-  width: 520px;
-  height: 48px;
-
-  /* Neutral/Grey/100 */
-
-  background-color: #F2F4F7;
-  background-size: cover;
-  /* Neutral/Grey/200 */
-  width: 500px;
-  height: 56px;
-  border: 1px solid #EAECF0;
-  border-radius: 4px;
-
-  /* Inside auto layout */
-
+  width: 92%;
+  height: 24px;
+  padding-bottom: 0px;
   flex: none;
   order: 0;
   flex-grow: 0;
+  
 }
 
 .search-button {
@@ -159,17 +175,13 @@ body {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  padding: 12px;
+  padding: 5px;
   gap: 8px;
-
-  position: absolute;
-  width: 40px;
-  height: 40px;
-  right: 535px;
-  top: 12px;
-
-  /* Neutral/Grey/100 */
-background-color: transparent;
+ font-size: 20px;
+  /* position: absolute; */
+  width: 8%;
+  height: 48px; 
+   background-color: transparent;
   border-style: none;
 }
 
@@ -180,7 +192,7 @@ background-color: transparent;
   align-items: center;
   padding: 0px;
   gap: 16px;
-  width: 627px;
+  width: 46%;
   height: 48px;
   flex: none;
   order: 1;
@@ -196,7 +208,7 @@ background-color: transparent;
   align-items: flex-start;
   padding: 0px;
   gap: 32px;
-  width: 418px;
+  width: 30%;
   height: 40px;
   flex: none;
   order: 2;
@@ -211,7 +223,7 @@ background-color: transparent;
   align-items: center;
   padding: 0px;
   gap: 24px;
-  width: 138px;
+  width: 40%;
   height: 40px;
   flex: none;
   order: 0;
@@ -309,8 +321,7 @@ background-color: transparent;
   align-items: center;
   padding: 0px;
   gap: 4px;
-
-  width: 105px;
+  width: 30%;
   height: 21px;
 
   border-radius: 24px;
@@ -323,7 +334,7 @@ background-color: transparent;
 }
 
 .signin-signup-button {
-  width: 105px;
+  width: 100%;
   height: 21px;
 
   /* Body/Body 2 Medium */
@@ -357,7 +368,7 @@ background-color: transparent;
   align-items: center;
   padding: 0px;
   gap: 2px;
-  width: 46px;
+  width: 15%;
   height: 40px;
   flex: none;
   order: 1;
@@ -372,6 +383,10 @@ background-color: transparent;
   width: 100%;
   height: 100%;
   text-align: left;
+}
+
+#profile-nav-buttons-hover-style:hover{
+  color: #0068B3;
 }
 
 .avatar-container {
@@ -475,6 +490,7 @@ background-color: transparent;
 }
 
 .postad-container {
+  width:30%;
   flex: none;
   order: 2;
   flex-grow: 0;
@@ -489,7 +505,7 @@ background-color: transparent;
   align-items: center;
   padding: 8px 16px;
   gap: 8px;
-  width: 117px;
+  width: 100%;
   height: 40px;
   color: white;
   background: #101828;
@@ -641,6 +657,7 @@ background-color: transparent;
   box-sizing: border-box;
   display: flex;
   flex-direction: row;
+  justify-content: center;
   align-items: center;
   padding: 0px;
   gap: 32px;
@@ -849,3 +866,193 @@ input {
 .nav-butons-style:hover{
   color: #0068B3;
 }
+
+.signip-first-container{
+  display: flex;
+flex-direction: column;
+align-items: flex-start;
+padding: 24px 24px 16px;
+gap: 16px;
+
+width: 500px;
+height: 155px;
+
+/* Neutral/Grey/25 */
+
+background: #FCFCFD;
+/* Neutral/Grey/100 */
+
+border-bottom: 1px solid #F2F4F7;
+
+/* Inside auto layout */
+
+flex: none;
+order: 0;
+align-self: stretch;
+flex-grow: 0;
+}
+
+.signup-mai-heading-container{
+  width: 452px;
+height: 30px;
+
+/* Title/Heading 4 */
+
+font-family: 'Inter';
+font-style: normal;
+font-weight: 500;
+font-size: 20px;
+line-height: 150%;
+/* identical to box height, or 30px */
+
+text-align: center;
+
+/* Neutral/Grey/900 */
+
+color: #101828;
+
+
+/* Inside auto layout */
+
+flex: none;
+order: 0;
+align-self: stretch;
+flex-grow: 0;
+}
+
+.logo-icon-container{
+  display: flex;
+flex-direction: row;
+align-items: center;
+padding: 0px;
+gap: 16px;
+
+width: 452px;
+height: 44px;
+
+
+/* Inside auto layout */
+
+flex: none;
+order: 0;
+align-self: stretch;
+flex-grow: 0;
+}
+
+.social-media-group-buttons-container{
+  display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+padding-left: 40px;
+gap: 12px;
+
+width: 388px;
+height: 272px;
+
+
+/* Inside auto layout */
+
+flex: none;
+order: 0;
+align-self: stretch;
+flex-grow: 0;
+}
+
+.social-media-buttons{
+  box-sizing: border-box;
+
+/* Auto layout */
+
+display: flex;
+flex-direction: row;
+align-items: center;
+padding: 10px 93px;
+gap: 12px;
+
+width: 388px;
+height: 44px;
+font-family: 'Inter';
+font-style: normal;
+font-weight: 600;
+font-size: 14px;
+line-height: 150%;
+/* identical to box height, or 21px */
+
+
+/* Neutral/Grey/700 */
+
+color: #344054;
+
+
+/* Neutral/Grey/0 */
+
+background: #FFFFFF;
+/* Neutral/Grey/300 */
+
+border: 1px solid #D0D5DD;
+border-radius: 4px;
+
+/* Inside auto layout */
+
+flex: none;
+order: 0;
+align-self: stretch;
+flex-grow: 0;
+}
+
+.create-account-button-contaier{
+  display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: flex-start;
+padding: 32px 56px;
+gap: 8px;
+
+width: 500px;
+height: 88px;
+
+/* Neutral/Grey/0 */
+
+background: #FFFFFF;
+/* Neutral/Grey/300 */
+
+border-top: 1px dashed #D0D5DD;
+border-radius: 0px 0px 8px 8px;
+
+/* Inside auto layout */
+
+flex: none;
+order: 2;
+align-self: stretch;
+flex-grow: 0;
+}
+
+.creat-account-button{
+ 
+  width: 287px;
+height: 24px;
+margin-left: 40px;
+/* Body/Body 1 Medium */
+background-color: transparent;
+border-style: none;
+font-family: 'Inter';
+font-style: normal;
+font-weight: 600;
+font-size: 16px;
+line-height: 150%;
+/* identical to box height, or 24px */
+
+
+/* Primary/Blue 100 */
+
+color: #0068B3;
+
+
+/* Inside auto layout */
+
+flex: none;
+order: 1;
+flex-grow: 0;
+}
+
