--- a/src/LandingSection/home.css
+++ b/src/LandingSection/home.css
@@ -10,16 +10,22 @@
     justify-content: flex-start;
     align-items: center;
     padding: 34px ;   
+    padding-bottom: 48px;
     /* gap: 32px; */
     position: absolute;
     width: 100vw;
-    height: 100%;
+    height: 100vh;
     left: 0px;
     top: 136px;
     box-sizing: border-box;
     overflow-y: scroll;
     padding-bottom: 150px;
+    background-color: #F4F5F7;
+    background-size: cover;
+    height: 100vh;
+    order:0
 }
+
 .carousel-main-container{    
     width: 100%;
     height: 265px;
@@ -201,7 +207,7 @@
     margin-top: 2.5vw;
     padding: 32px 24px;
     gap: 24px;
-    width: 95vw;
+    width: 100%;
     height: 499px;
     background: #FFFFFF;
     box-shadow: 0px 1px 3px rgba(16, 24, 40, 0.1), 0px 1px 2px rgba(16, 24, 40, 0.06);
@@ -430,4 +436,9 @@
     order: 5;
     flex-grow: 0;
     z-index: 5;
+}
+
+.landing-footer{
+    top: 2784px;
+    order:1
 }
