--- a/src/MotorsListItemDetails/listItem.css
+++ b/src/MotorsListItemDetails/listItem.css
@@ -5,13 +5,15 @@
   align-items: center;
   padding: 32px 80px 80px;
   gap: 16px;
-
   position: absolute;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   left: 0px;
   top: 136px;
   overflow-y: scroll;
+  background-color: #F4F5F7;
+  background-size: cover;
+  height: 100vh;
 
 }
 
@@ -285,6 +287,15 @@
   flex: none;
   order: 0;
   flex-grow: 0;
+}
+
+.avatar{
+  display: flex;
+width: 32px;
+height: 32px;
+justify-content: center;
+align-items: center;
+flex-shrink: 0;
 }
 
 .avatar-icon-container,
@@ -1023,7 +1034,7 @@
   flex-grow: 0;
 }
 
-.user-name {
+.profile-user-name {
   width: 67px;
   height: 24px;
   padding-top: 8px;
@@ -1031,7 +1042,7 @@
 
   font-family: 'Inter';
   font-style: normal;
-  font-weight: 500;
+  font-weight: 600;
   font-size: 16px;
   line-height: 150%;
   /* identical to box height, or 24px */
@@ -1042,7 +1053,7 @@
   /* Primary/Blue 100 */
 
   color: #0068B3;
-
+  cursor: pointer;
 
   /* Inside auto layout */
 
@@ -1264,7 +1275,7 @@
   flex-direction: column;
   align-items: flex-start;
   padding: 32px 24px;
-  gap: 24px;
+  gap: 16px;
 
   width: 100%;
   height: 509px;
@@ -1280,7 +1291,7 @@
   /* Inside auto layout */
 
   flex: none;
-  order: 1;
+  order: 0;
   align-self: stretch;
   flex-grow: 0;
 }
@@ -1419,7 +1430,7 @@
   align-items: center;
   padding: 0px;
   gap: 16px;
-  isolation: isolate;
+  /* isolation: isolate; */
 
   width: 100%;
   height: 340px;
@@ -1460,4 +1471,13 @@
 
   /* margin-left: 190px; */
 
+}
+
+#embedded-map-display{
+  width:100%
+}
+
+.map-sizes{
+  width:100%;
+  height:200px;
 }
