--- a/src/MyAds/Myads.css
+++ b/src/MyAds/Myads.css
@@ -5,15 +5,18 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 80px 32px;
+    padding: 50px 32px;
     gap: 24px;
     position: absolute;
     width: 100vw;
     height: 100vh;
     left: 0px;
-    top: 136px;
+    top: 136px;    
     overflow-y: scroll;
     padding-bottom: 150px;
+    background-color: #F4F5F7;
+    background-size: cover;
+    height: 100vh;
 
 }
 
@@ -23,8 +26,8 @@
     align-items: flex-start;
     padding: 32px 24px;
     gap: 24px;
-    width: 750px;
-    height: 1592px;
+    width: 100%;
+    height: 1100px;
     background: #FFFFFF;
     box-shadow: 0px 1px 3px rgba(16, 24, 40, 0.1), 0px 1px 2px rgba(16, 24, 40, 0.06);
     border-radius: 8px;
@@ -83,8 +86,8 @@
     align-items: flex-start;
     padding: 0px;
     gap: 16px;
-    width: 750px;
-    height: 1629px;
+    width: 100%;
+    height: 100%;
     flex: none;
     order: 0;
     flex-grow: 0;
@@ -109,8 +112,8 @@
     align-items: flex-start;
     padding: 0px;
     gap: 16px;
-    width: 702px;
-    height: 691px;
+    width: 100%;
+    height: 100%;
     border-top: 1px solid #EAECF0;
     flex: none;
     order: 2;
@@ -193,7 +196,7 @@
     align-items: flex-start;
     padding: 16px;
     gap: 16px;
-    width: 702px;
+    width: 100%;
     height: 172px;
     background: #FFFFFF;
     border: 1px solid #EAECF0;
@@ -866,7 +869,7 @@
     flex-grow: 1;
 }
 
-.location {
+.my-ad-location {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -878,9 +881,7 @@
     flex: none;
     order: 1;
     align-self: stretch;
-    flex-grow: 0;
-    width: 62px;
-    height: 18px;
+    flex-grow: 0;    
     font-family: 'Inter';
     font-style: normal;
     font-weight: 500;
@@ -988,5 +989,10 @@ order: 1;
 align-self: stretch;
 flex-grow: 0;
 
+}
+
+.myAd-nav-options{
+    background-color: transparent;
+    border-style: none;
 }
 
