--- a/src/MyFavourites/Fav.css
+++ b/src/MyFavourites/Fav.css
@@ -14,6 +14,9 @@
     left: 0px;
     top: 136px;
     overflow-y: scroll;
+    background-color: #F4F5F7;
+    background-size: cover;
+    height: 100vh;
 
 }
 
