--- a/src/SearchResults/searchResults.css
+++ b/src/SearchResults/searchResults.css
@@ -14,6 +14,9 @@
     left: 0px;
     top: 136px;
     overflow-y: scroll;
+    background-color: #F4F5F7;
+    background-size: cover;
+    height: 100vh;
 }
 
 .search-result-ad-container{
@@ -66,11 +69,11 @@ flex-grow: 0;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    align-items: center;
+    align-items: flex-start;
     padding: 32px 24px;
     gap: 40px;
     width: 100%;
-    height: 100%;
+    height: 1576px;
     background: #FFFFFF;
     box-shadow: 0px 1px 3px rgba(16, 24, 40, 0.1), 0px 1px 2px rgba(16, 24, 40, 0.06);
     border-radius: 8px;
@@ -178,16 +181,13 @@ flex-direction: row;
 justify-content: flex-start;
 align-items: flex-start;
 padding: 0px;
-gap: 24px;
-
+gap: 10px;
 width: 100%;
-height: 1576px;
-/* overflow-y: scroll; */
 flex-wrap: wrap;
-
 /* Inside auto layout */
-
 flex: none;
 order: 1;
 flex-grow: 0;
+
 }
+
