--- a/src/SellerFlowSteps/step4.css
+++ b/src/SellerFlowSteps/step4.css
@@ -22,8 +22,8 @@
   padding: 0px 32px;
   gap: 24px;
 
-  width: 95vw;
-  height: 95vh;
+  width: 100%;
+  height: 100%;
 
 
   /* Inside auto layout */
@@ -41,7 +41,7 @@
   gap: 24px;
 
   width: 500px;
-  height: 1148px;
+  height: 1228px;
 
   /* Neutral/Grey/0 */
 
@@ -152,6 +152,283 @@
   order: 1;
   align-self: stretch;
   flex-grow: 0;
+}
+.saved-card-title-container{
+  display: flex;
+flex-direction: column;
+align-items: flex-start;
+padding: 32px 0px 0px;
+gap: 4px;
+
+width: 452px;
+height: 59px;
+
+/* Neutral/Grey/0 */
+
+background: #FFFFFF;
+
+/* Inside auto layout */
+
+flex: none;
+order: 0;
+align-self: stretch;
+flex-grow: 0;
+}
+
+.saved-title{
+  width: 54px;
+height: 27px;
+
+/* Title/Sub Heading */
+
+font-family: 'Inter';
+font-style: normal;
+font-weight: 500;
+font-size: 18px;
+line-height: 150%;
+/* identical to box height, or 27px */
+
+
+/* Neutral/Grey/900 */
+
+color: #101828;
+
+
+/* Inside auto layout */
+
+flex: none;
+order: 0;
+flex-grow: 0;
+}
+
+.active-card-item{
+  box-sizing: border-box;
+
+/* Auto layout */
+
+display: flex;
+flex-direction: row;
+align-items: flex-start;
+padding: 16px;
+gap: 8px;
+
+width: 452px;
+height: 102px;
+
+/* Primary/Blue 25 */
+
+background: #E6F0F7;
+/* Primary/Blue 100 */
+
+border: 2px solid #0068B3;
+border-radius: 4px;
+
+/* Inside auto layout */
+
+
+
+}
+
+.saved-card-container{
+  box-sizing: border-box;
+
+/* Auto layout */
+
+display: flex;
+flex-direction: row;
+align-items: flex-start;
+padding: 16px;
+gap: 8px;
+
+width: 452px;
+height: 102px;
+list-style-type: none;
+/* Base / White */
+
+background: #FFFFFF;
+/* Neutral/Grey/200 */
+
+border: 1px solid #EAECF0;
+border-radius: 4px;
+
+/* Inside auto layout */
+
+flex: none;
+align-self: stretch;
+flex-grow: 0;
+}
+
+.saved-card-inner-container{
+  display: flex;
+flex-direction: row;
+align-items: flex-start;
+padding: 0px;
+gap: 12px;
+
+width: 396px;
+height: 70px;
+
+
+/* Inside auto layout */
+
+flex: none;
+order: 0;
+flex-grow: 1;
+}
+
+.saved-card-gateway-image{
+  box-sizing: border-box;
+
+width: 46px;
+height: 32px;
+
+/* Base / White */
+
+background: #FFFFFF;
+/* Gray / 100 */
+
+border: 1px solid #F2F4F7;
+border-radius: 6px;
+
+/* Inside auto layout */
+
+flex: none;
+order: 0;
+flex-grow: 0;
+}
+
+.card-details-container{
+  display: flex;
+flex-direction: column;
+align-items: flex-start;
+padding: 0px;
+gap: 8px;
+
+width: 338px;
+height: 70px;
+
+
+/* Inside auto layout */
+
+flex: none;
+order: 1;
+flex-grow: 1;
+}
+
+.card-number-last-digits{
+  width: 338px;
+height: 21px;
+
+/* Body/Body 2 Medium */
+
+font-family: 'Inter';
+font-style: normal;
+font-weight: 500;
+font-size: 14px;
+line-height: 150%;
+/* identical to box height, or 21px */
+
+
+/* Neutral/Grey/700 */
+
+color: #344054;
+margin: 0px;
+
+/* Inside auto layout */
+
+flex: none;
+order: 0;
+align-self: stretch;
+flex-grow: 0;
+}
+
+.expiry-date{
+  
+width: 338px;
+height: 21px;
+
+/* Body/Body 2 */
+
+font-family: 'Inter';
+font-style: normal;
+font-weight: 400;
+font-size: 14px;
+line-height: 150%;
+/* identical to box height, or 21px */
+margin: 0px;
+
+/* Neutral/Grey/500 */
+
+color: #667085;
+
+
+/* Inside auto layout */
+
+flex: none;
+order: 1;
+align-self: stretch;
+flex-grow: 0;
+}
+
+.default-set{
+  display: flex;
+flex-direction: row;
+align-items: flex-start;
+padding: 0px;
+gap: 8px;
+
+width: 149px;
+height: 20px;
+font-family: 'Inter';
+font-style: normal;
+font-weight: 600;
+font-size: 14px;
+line-height: 20px;
+/* identical to box height, or 143% */
+
+
+/* Neutral/Grey/500 */
+
+color: #667085;
+
+
+/* Inside auto layout */
+
+flex: none;
+order: 1;
+flex-grow: 0;
+}
+
+.edit-button{
+  display: flex;
+flex-direction: row;
+justify-content: center;
+align-items: center;
+padding: 0px;
+gap: 8px;
+
+width: 27px;
+height: 20px;
+font-family: 'Inter';
+font-style: normal;
+font-weight: 600;
+font-size: 14px;
+line-height: 20px;
+/* identical to box height, or 143% */
+background-color: transparent;
+border-style: none;
+
+/* Primary/Blue 100 */
+
+color: #0068B3;
+
+
+
+/* Inside auto layout */
+
+flex: none;
+order: 1;
+flex-grow: 0;
 }
 
 .payment-card-input-fields-container {
@@ -493,3 +770,64 @@
   order: 0;
   flex-grow: 0;
 }
+
+.step-four-pay-button{
+  display: flex;
+flex-direction: row;
+justify-content: center;
+align-items: center;
+padding: 8px 16px;
+gap: 8px;
+
+width: 452px;
+height: 37px;
+
+/* Neutral/Grey/900 */
+
+background-color: #101828;
+border-radius: 4px;
+font-family: 'Inter';
+font-style: normal;
+font-weight: 500;
+font-size: 14px;
+line-height: 150%;
+color: #FCFCFD;
+flex: none;
+order: 1;
+flex-grow: 1;
+}
+
+.step-four-pay-disable-button{
+  display: flex;
+flex-direction: row;
+justify-content: center;
+align-items: center;
+padding: 8px 16px;
+gap: 8px;
+
+width: 452px;
+height: 37px;
+
+/* Neutral/Grey/900 */
+border-style: none;
+background-color: #dce1e3;
+border-radius: 4px;
+font-family: 'Inter';
+font-style: normal;
+font-weight: 500;
+font-size: 14px;
+line-height: 150%;
+color: #FCFCFD;
+flex: none;
+order: 1;
+flex-grow: 1;
+
+
+}
+
+
+
+.car-ads-photos-info-container{
+  display: none;
+}
+
