--- a/src/Settings/ReportIssue/reportissue.css
+++ b/src/Settings/ReportIssue/reportissue.css
@@ -84,6 +84,10 @@
     flex-grow: 0;
 }
 
+.Report-breadcrumbs-pointer{
+    cursor: pointer;
+}
+
 .reportIssue-tot-settings {
     display: flex;
     flex-direction: row;
