--- a/src/Settings/settings.css
+++ b/src/Settings/settings.css
@@ -13,6 +13,9 @@
     top: 136px;
     overflow-y: scroll;
     padding-bottom: 150px;
+    background-color: #F4F5F7;
+    background-size: cover;
+    height: 100vh;
 }
 
 .settings-main-ads-container {
@@ -79,6 +82,10 @@
     order: 0;
     align-self: stretch;
     flex-grow: 0;
+}
+
+.Settings-bread-crumbs-pointer{
+    cursor: pointer;
 }
 
 
@@ -297,7 +304,7 @@
 
 }
 
-.payments-heading {
+.settings-payments-heading {
     width: 85px;
     height: 27px;
 
@@ -324,6 +331,10 @@
 }
 
 .saved-payments-heading {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: flex-start;
     width: 140px;
     height: 21px;
 
@@ -358,7 +369,8 @@
 
     width: 552px;
     height: 24px;
-
+    border-style: none;
+    background: transparent;
 
     /* Inside auto layout */
 
@@ -402,7 +414,7 @@
 
     font-family: 'Inter';
     font-style: normal;
-    font-weight: 500;
+    font-weight: 600;
     font-size: 16px;
     line-height: 150%;
     /* identical to box height, or 24px */
@@ -452,7 +464,8 @@
 
     width: 552px;
     height: 24px;
-
+    border-style: none;
+    background-color: transparent;
 
     /* Inside auto layout */
 
@@ -488,11 +501,13 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-start;
     padding: 0px;
 
     width: 552px;
     height: 24px;
+    border-style: none;
+    background-color: transparent;
 
 
     /* Inside auto layout */
@@ -507,12 +522,13 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-start;
     padding: 0px;
 
     width: 552px;
     height: 24px;
-
+    background-color: transparent;
+    border-style: none;
 
     /* Inside auto layout */
 
@@ -526,12 +542,13 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-start;
     padding: 0px;
 
     width: 552px;
     height: 24px;
-
+    border-style: none;
+    background-color: transparent;
 
     /* Inside auto layout */
 
@@ -561,4 +578,259 @@
     order: 5;
     align-self: stretch;
     flex-grow: 0;
+}
+
+.delete-account-dialog-container{
+    display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+padding: 0px;
+
+/* position: relative; */
+width: 400px;
+height: 330px;
+left: 778px;
+top: 1848px;
+
+/* Base / White */
+
+background: #FFFFFF;
+/* Modal */
+
+box-shadow: 0px 20px 24px -4px rgba(16, 24, 40, 0.1), 0px 8px 8px -4px rgba(16, 24, 40, 0.04);
+border-radius: 12px;
+}
+
+.account-delete-information-first-container{
+    box-sizing: border-box;
+
+/* Auto layout */
+
+display: flex;
+flex-direction: column;
+align-items: flex-start;
+padding: 24px 24px 16px;
+gap: 16px;
+
+width: 400px;
+height: 176px;
+
+/* Neutral/Grey/25 */
+
+background: #FCFCFD;
+/* Neutral/Grey/100 */
+
+border-bottom: 1px solid #F2F4F7;
+
+/* Inside auto layout */
+
+flex: none;
+order: 0;
+align-self: stretch;
+flex-grow: 0;
+
+}
+
+.delte-account-conformation-buttons-contaier{
+    box-sizing: border-box;
+
+/* Auto layout */
+
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: flex-start;
+padding: 32px 24px;
+gap: 16px;
+
+width: 400px;
+height: 154px;
+
+/* Neutral/Grey/0 */
+
+background: #FFFFFF;
+/* Neutral/Grey/300 */
+
+border-top: 1px dashed #D0D5DD;
+border-radius: 0px 0px 8px 8px;
+
+/* Inside auto layout */
+
+flex: none;
+order: 1;
+align-self: stretch;
+flex-grow: 0;
+}
+
+.delete-account-icon-container{
+    width: 32px;
+    height: 32px;    
+    background: #FEE4E2;
+    /* border: 4px solid #FEF3F2; */
+    border-radius: 28px;    
+    flex: none;
+    order: 1;
+    flex-grow: 0;
+}
+
+.delete-account-icon{
+    font-size: 26px;
+    color:  #D92D20;
+    padding-left: 8px;
+    padding-top: 5px;
+}
+
+.delete-account-conformation-container{
+    /* Auto layout */
+
+display: flex;
+flex-direction: column;
+align-items: flex-start;
+padding: 0px;
+gap: 4px;
+margin: 0px;
+width: 352px;
+height: 76px;
+
+
+/* Inside auto layout */
+
+flex: none;
+order: 1;
+align-self: stretch;
+flex-grow: 0;
+}
+
+.are-yousure-text{
+    width: 352px;
+max-height: 30px;
+padding-bottom: 8px;
+/* Title/Heading 4 */
+
+font-family: 'Inter';
+font-style: normal;
+font-weight: 600;
+font-size: 20px;
+line-height: 150%;
+/* identical to box height, or 30px */
+
+
+/* Neutral/Grey/900 */
+
+color: #101828;
+
+
+/* Inside auto layout */
+
+flex: none;
+order: 0;
+align-self: stretch;
+flex-grow: 0;
+}
+.conformation-text{
+    width: 351px;
+height: 42px;
+
+/* Body/Body 2 */
+
+font-family: 'Inter';
+font-style: normal;
+font-weight: 500;
+font-size: 14px;
+line-height: 150%;
+/* or 21px */
+padding-left: 10px;
+
+
+/* Neutral/Grey/600 */
+
+color: #475467;
+
+
+/* Inside auto layout */
+
+flex: none;
+order: 1;
+align-self: stretch;
+flex-grow: 0;
+}
+
+.delete-account-button{
+    display: flex;
+flex-direction: row;
+justify-content: center;
+align-items: center;
+padding: 8px 16px;
+gap: 8px;
+
+width: 352px;
+height: 37px;
+
+/* Error/100 */
+
+background: #D92D20;
+border-radius: 4px;
+font-family: 'Inter';
+font-style: normal;
+font-weight: 500;
+font-size: 14px;
+line-height: 150%;
+/* identical to box height, or 21px */
+border-style: none;
+
+/* Neutral/Grey/25 */
+
+color: #FCFCFD;
+
+
+/* Inside auto layout */
+
+flex: none;
+order: 0;
+align-self: stretch;
+flex-grow: 0;
+}
+
+.cancel-delete-account-button{
+    box-sizing: border-box;
+
+/* Auto layout */
+
+display: flex;
+flex-direction: row;
+justify-content: center;
+align-items: center;
+padding: 8px 16px;
+gap: 8px;
+width: 352px;
+height: 37px;
+margin-top: 10px;
+/* Neutral/Grey/300 */
+background-color: transparent;
+border: 1px solid #D0D5DD;
+border-radius: 4px;
+font-family: 'Inter';
+font-style: normal;
+font-weight: 500;
+font-size: 14px;
+line-height: 150%;
+/* identical to box height, or 21px */
+
+
+/* Neutral/Grey/700 */
+
+color: #344054;
+
+/* Inside auto layout */
+
+flex: none;
+order: 1;
+align-self: stretch;
+flex-grow: 0;
+}
+
+.settings-footer-container{
+    margin-top:30px;
+    order:1;
 }
